# commit-message-validator

./: .gitignore  .gitlab-ci.yml  .gitreview  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.rst  CREDITS  HISTORY.rst  README  README.rst  pyproject.toml  setup.py  tox.ini
commit_message_validator/: __init__.py  message_validator.py
commit_message_validator/tests/: sample_repository.py  test_GerritMessageValidator.py  test_commit-message-validator.py  test_commit_message_validator.py  test_message_validator.py
commit_message_validator/tests/data/: bug_in_header.out  check_message_errors.msg  check_message_errors.out  check_message_ok.msg  cherry_pick_not_on_the_last_line.out  co-authored-by_ok.msg  invalid_change_id.msg  invalid_change_id.out  invalid_depends_on.out  multiple_change_id.msg  multiple_change_id.out  note-in-message_ok.msg  really_long_url_ok.msg  really_long_url_ok.out  short_one_line.out  short_two_lines.out  signed-off-by_ok.msg  tag-like-in-message_ok.msg  unexpected_line_in_footers.out
commit_message_validator/validators/: GerritMessageValidator.py  GitHubMessageValidator.py  GlobalMessageValidator.py
src/commit_message_validator/: __init__.py  __main__.py  cli.py  hooks.py  lint.py  sample.py  utils.py  version.py
src/commit_message_validator/validators/: GerritMessageValidator.py  __init__.py  abstract.py  basic.py  core.py  gerrit.py  github.py  rules.py  wikimedia.py
templates/: lint-merge-request.yml
tests/: sample_repository.py  test_GerritMessageValidator.py  test_RulesMessageValidator.py  test_commit_message_validator.py  test_lint.py  test_message_validator.py  test_utils.py
tests/data/: T357188
tests/data/GerritMessageValidator/: before_change_id.msg  before_change_id.out  bug_in_header.msg  bug_in_header.out  change_private_ok.msg  change_private_ok.out  check_message_errors.out  cherry_pick_not_on_the_last_line.msg  cherry_pick_not_on_the_last_line.out  co-authored-by_ok.msg  hosts_ok.msg  invalid_change_id.out  invalid_depends_on.out  invalid_needed_by.msg  invalid_needed_by.out  multiple_change_id.out  needed-by_ok.msg  short_one_line.msg  short_one_line.out  short_two_lines.msg  short_two_lines.out  tag-like-in-message_ok.msg  unexpected_line_in_footers.msg  unexpected_line_in_footers.out
tests/data/GitHubMessageValidator/: check_bug_in_header.out  check_github_close_keyword_another_repository.msg  check_github_closed_keyword_another_repository.msg  github_close_keyword_error.out  good_commit_ok.msg  good_commit_ok.out
tests/data/GitLabMessageValidator/: T351253-slash.msg  T351253-slash.out  T351253-space-ok.msg  ok.msg  ok.out
(+25 files in other folders)
